# AI-Panel-Studio

./: .gitignore  README.md
backend/: .env.example  .gitignore  pyproject.toml
backend/app/: config.py  main.py
backend/app/agents/: base_agent.py  discussion_runner.py  expert_agent.py  host_agent.py  llm_client.py  observer_agent.py  scheduler.py
backend/app/api/: discussions.py  panel.py  router.py  ws.py
backend/app/db/: database.py  session.py
backend/app/models/: __init__.py  base.py  consensus.py  discussion.py  expert_status_log.py  panel_member.py  utterance.py
backend/app/schemas/: common.py  consensus.py  discussion.py  panel.py  utterance.py  ws_events.py
backend/app/services/: discussion_manager.py  discussion_service.py  panel_service.py  report_service.py  runner_registry.py
backend/tests/: conftest.py
backend/tests/e2e/: test_full_user_flow.py
backend/tests/factories/: discussion_factory.py  panel_member_factory.py
backend/tests/integration/: test_api.py  test_discussion_api.py  test_error_handling.py  test_frontend_client.py
backend/tests/unit/: test_config.py  test_database.py  test_discussion_runner.py  test_expert_agent.py  test_host_agent.py  test_infrastructure.py  test_llm_client.py  test_llm_panel.py  test_models.py  test_observer_agent.py  test_scheduler.py  test_schemas.py
docs/: PRD.md  phase-1-prompts.md  phase-2-prompts.md  phase-3-prompts.md  phase-4-prompts.md
docs/api/: BACKEND_API.md  README.md
docs/ddd/: COMPONENT_SPEC.md  FRONTEND_API.md  (+3 more)
frontend/: index.html  package-lock.json  package.json  vite.config.ts
(+79 files in other folders)
